--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -24,6 +24,8 @@ RUN set -ex \
     # && gem install fluent-plugin-logentries \
 <%  when "loggly"%>
     && gem install fluent-plugin-loggly \
+<%  when "logzio"%>
+    && gem install fluent-plugin-logzio \
 <%  when "cloudwatch"%>
     && gem install fluent-plugin-cloudwatch-logs -v 0.3.3 \
 <% end%>
