--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -41,6 +41,10 @@ RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
     && gem install fluent-plugin-cloudwatch-logs -v 0.3.3 \
 <% end%>
     && gem install fluent-plugin-kubernetes_metadata_filter \
+<% if !is_alpine %>
+    && gem install ffi \
+    && gem install fluent-plugin-systemd -v 0.0.8 \
+<% end %>
 <% if is_alpine %>
     && apk del .build-deps \
 <% else %>
@@ -55,6 +59,9 @@ RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
 
 # Copy configuration files
 COPY ./conf/fluent.conf /fluentd/etc/
+<% if !is_alpine %>
+COPY ./conf/systemd.conf /fluentd/etc/
+<% end %>
 COPY ./conf/kubernetes.conf /fluentd/etc/
 
 # Copy plugins
