Fix 64a5ba by adding ES user/password options into fluentd.conf.erb

--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -13,6 +13,8 @@
    host "#{ENV['FLUENT_ELASTICSEARCH_HOST']}"
    port "#{ENV['FLUENT_ELASTICSEARCH_PORT']}"
    scheme "#{ENV['FLUENT_ELASTICSEARCH_SCHEME'] || 'http'}"
+   user "#{ENV['FLUENT_ELASTICSEARCH_USER']}"
+   password "#{ENV['FLUENT_ELASTICSEARCH_PASSWORD']}"
    logstash_format true
    buffer_chunk_limit 2M
    buffer_queue_limit 32
