Add docker to systemd sources

--- a/templates/conf/systemd.conf.erb
+++ b/templates/conf/systemd.conf.erb
@@ -9,3 +9,11 @@
   read_from_head true
   tag kubelet
 </source>
+
+<source>
+  @type systemd
+  filters [{ "_SYSTEMD_UNIT": "docker.service" }]
+  pos_file /var/log/fluentd-journald-docker.pos
+  read_from_head true
+  tag docker.systemd
+</source>
