--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -43,6 +43,8 @@ RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
     && gem install fluent-plugin-google-cloud \
 <% when "s3" %>
     && gem install fluent-plugin-s3 -v "~> 0.8" \
+<% when "papertrail" %>
+    && gem install fluent-plugin-remote_syslog -v 0.3.3 \
 <% end%>
     && gem install fluent-plugin-kubernetes_metadata_filter \
 <% if !is_alpine %>
