--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -84,8 +84,8 @@
 <% when "papertrail"%>
 <match **>
   type remote_syslog
-  host ${ENV["PAPERTRAIL_REMOTE_SYSLOG_HOST_URI"]}
-  port ${ENV["PAPERTRAIL_REMOTE_SYSLOG_HOST_PORT"]}
+  host ${ENV["FLUENT_PAPERTRAIL_HOST"]}
+  port ${ENV["FLUENT_PAPERTRAIL_PORT"]}
   flush_interval 5s
 </match>
 <% end%>
