--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -17,6 +17,7 @@ ENV PATH /home/fluent/.gem/ruby/2.3.0/bin:$PATH
 
 <% if is_alpine %>
 RUN set -ex \
+    && apk update && apk upgrade \
     && apk add --no-cache --virtual .build-deps \
         build-base \
         ruby-dev \
@@ -25,6 +26,7 @@ RUN set -ex \
 <% else %>
 RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev git" \
      && apt-get update \
+     && apt-get upgrade \
      && apt-get install \
      -y --no-install-recommends \
      $buildDeps \
