--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -22,9 +22,8 @@ RUN set -ex \
         build-base \
         ruby-dev \
         libffi-dev \
-        git \
 <% else %>
-RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev git" \
+RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
      && apt-get update \
      && apt-get upgrade \
      && apt-get install \
