--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -53,12 +53,12 @@
 <%  when "s3"%>
 <match **>
   # docs: https://docs.fluentd.org/v0.12/articles/out_s3
+  # note: this configuration relies on the nodes have an IAM instance profile with access to your S3 bucket
   type s3
   log_level info
   s3_bucket "#{ENV['S3_BUCKET_NAME']}"
   s3_region "#{ENV['S3_BUCKET_REGION']}"
   s3_object_key_format %{path}%{time_slice}/cluster-log-%{index}.%{file_extension}
-  buffer_path "#{ENV['S3_BUFFER_PATH']}"
   time_slice_format %Y/%m/%d
   time_slice_wait 10m
   utc
