Ugly hack to fix graylog publish errors

--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -22,7 +22,7 @@ RUN set -ex \
         ruby-dev \
         libffi-dev \
 <% else %>
-RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
+RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev git build-essential patch zlib1g-dev liblzma-dev" \
      && apt-get update \
      && apt-get install \
      -y --no-install-recommends \
@@ -45,7 +45,11 @@ RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
 <% when "s3" %>
     && gem install fluent-plugin-s3 -v "~> 0.8" \
 <% when "graylog" %>
-    && gem install gelf \
+    && gem install jeweler \
+    && git clone https://github.com/graylog-labs/gelf-rb.git \
+    && cd gelf-rb \
+    && rake install \
+    && gem install fluent-plugin-gelf-hs \
 <% end%>
     && gem install fluent-plugin-kubernetes_metadata_filter \
 <% if !is_alpine %>
