--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -21,8 +21,12 @@ RUN set -ex \
         build-base \
         ruby-dev \
         libffi-dev \
+<% case target when "graylog"%>
+        zlib-dev \
+        git \
+<% end %>
 <% else %>
-RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev git build-essential patch zlib1g-dev liblzma-dev" \
+RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev<% case target when "graylog" %> git build-essential patch zlib1g-dev liblzma-dev<% end %>" \
      && apt-get update \
      && apt-get install \
      -y --no-install-recommends \
