Remove PaperTrail specific config from other integrations

--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -83,6 +83,14 @@
 
 <% when "papertrail"%>
 
+## Capture audit logs
+#<match kube-apiserver-audit>
+#  type papertrail
+#
+#  papertrail_host "#{ENV['FLUENT_PAPERTRAIL_AUDIT_HOST']}"
+#  papertrail_port "#{ENV['FLUENT_PAPERTRAIL_AUDIT_PORT']}"
+#</match>
+
 <match **>
   type papertrail
 
@@ -90,4 +98,5 @@
   papertrail_port "#{ENV['FLUENT_PAPERTRAIL_PORT']}"
 
 </match>
+
 <% end%>
