--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -25,7 +25,7 @@ RUN set -ex \
 <% else %>
 RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
      && apt-get update \
-     && apt-get upgrade \
+     && apt-get upgrade -y \
      && apt-get install \
      -y --no-install-recommends \
      $buildDeps \
