--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -67,6 +67,20 @@
   buffer_chunk_limit 256m
   buffer_path /var/log/fluentd-buffers/s3.buffer
 </match>
+<%  when "gcs"%>
+<match **>
+  # docs: https://github.com/daichirata/fluent-plugin-gcs
+  # this configuration relies on the nodes having permission to write on your gs bucket
+  type gcs
+  project "#{ENV['GCS_BUCKET_PROJECT']}"
+  bucket "#{ENV['GCS_BUCKET_NAME']}"
+  object_key_format %{path}%{time_slice}/%{hostname}/%{index}.%{file_extension}
+  path logs/
+  buffer_path /var/log/fluentd-buffers/gcs.buffer
+  time_slice_format %Y/%m/%d
+  time_slice_wait 10m
+  utc
+</match>
 <% when "stackdriver"%>
 <match **>
   type google_cloud
