--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -50,12 +50,10 @@ RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev<% case target when
     && gem install fluent-plugin-google-cloud \
 <% when "s3" %>
     && gem install fluent-plugin-s3 -v "~> 0.8" \
-<% when "graylog" %>
-    && gem install jeweler \
-    && git clone https://github.com/graylog-labs/gelf-rb.git \
-    && cd gelf-rb \
-    && rake install \
-    && gem install fluent-plugin-gelf-hs \
+<% when "gcs" %>
+    && gem install fluent-plugin-gcs -v "~> 0.3"  --no-document \
+<% when "papertrail" %>
+    && gem install fluent-plugin-papertrail -v 0.1.1 \
 <% end%>
     && gem install fluent-plugin-kubernetes_metadata_filter \
 <% if !is_alpine %>
