also install detect exceptions plugin

--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -37,6 +37,7 @@ RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev<% case target when
     && echo 'gem: --no-document' >> /etc/gemrc \
     && gem install fluent-plugin-secure-forward \
     && gem install fluent-plugin-record-reformer \
+    && gem install fluent-plugin-detect-exceptions -v 0.0.9 \
 <% case target when "elasticsearch"%>
     && gem install fluent-plugin-elasticsearch -v "<2" \
 <% when "logentries"%>
