--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -49,7 +49,8 @@ RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
 <% when "papertrail" %>
     && gem install fluent-plugin-papertrail -v 0.1.1 \
 <% when "syslog" %>
-    && gem install fluent-plugin-remote_syslog -v 0.3.3 \
+    && gem install specific_install \
+    && gem specific_install -l https://github.com/georgegoh/fluent-plugin-kubernetes_remote_syslog.git \
 <% end%>
     && gem install fluent-plugin-kubernetes_metadata_filter \
 <% if !is_alpine %>
