--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -33,6 +33,8 @@ RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
     && echo 'gem: --no-document' >> /etc/gemrc \
     && gem install fluent-plugin-secure-forward \
     && gem install fluent-plugin-record-reformer \
+    && gem install fluent-plugin-rewrite-tag-filter -v 1.6.0 \
+    && gem install fluent-plugin-prometheus \
 <% case target when "elasticsearch"%>
     && gem install fluent-plugin-elasticsearch \
 <% when "logentries"%>
