--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -51,7 +51,7 @@ RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
 <% when "kafka" %>
     && gem install fluent-plugin-kafka \
 <% when "logzio" %>
-    && gem install fluent-plugin-logzio \
+    && gem install fluent-plugin-logzio -v 0.0.14 \
 <% end%>
     && gem install fluent-plugin-kubernetes_metadata_filter \
 <% if !is_alpine %>
