Making some changes to sync up upstream and rubicon versions

--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -27,7 +27,8 @@ RUN set -ex \
         git \
 <% end %>
 <% else %>
-RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev<% case target when "graylog" %> git build-essential patch zlib1g-dev liblzma-dev<% end %>" \
+RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev \
+     <% case target when "graylog" %> git build-essential patch zlib1g-dev liblzma-dev<% end %>" \
      && apt-get update \
      && apt-get upgrade -y \
      && apt-get install \
@@ -53,11 +54,21 @@ RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev<% case target when
     && gem install fluent-plugin-s3 -v "~> 0.8" \
 <% when "gcs" %>
     && gem install fluent-plugin-gcs -v "~> 0.3"  --no-document \
+<% when "graylog" %>
+    && gem install jeweler \
+    && git clone https://github.com/graylog-labs/gelf-rb.git \
+    && cd gelf-rb \
+    && rake install \
+    && gem install fluent-plugin-gelf-hs \
+<% when "logzio" %>
+    && gem install fluent-plugin-logzio \
 <% when "papertrail" %>
     && gem install fluent-plugin-papertrail -v 0.1.1 \
 <% when "syslog" %>
     && gem install specific_install \
     && gem specific_install -l https://github.com/georgegoh/fluent-plugin-kubernetes_remote_syslog.git \
+<% when "kafka" %>
+    && gem install fluent-plugin-kafka \
 <% end%>
     && gem install fluent-plugin-kubernetes_metadata_filter \
 <% if !is_alpine %>
