--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -120,6 +120,7 @@
    max_retry_wait 30
    disable_retry_limit
    num_threads 8
+</match>
 <% when "logzio"%>
 <match **>
   type logzio_buffered
