--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -29,12 +29,13 @@ RUN set -ex \
         build-base \
         ruby-dev \
         libffi-dev \
-<% if target == "graylog"%>
+<% if target == "graylog" %>
         zlib-dev \
 <% end %>
 <% if requires_git %>
         git \
 <% end %>
+    && gem install bundler --version 1.16.1 \
 <% else %>
   RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev<% if target == "graylog" %> build-essential patch zlib1g-dev liblzma-dev<% end %><% if requires_git %> git<% end %>" \
      && apt-get update \
