--- a/templates/conf/systemd.conf.erb
+++ b/templates/conf/systemd.conf.erb
@@ -6,6 +6,7 @@
 # Logs from systemd-journal for interesting services.
 <source>
   @type systemd
+  @id in_systemd_kubelet
   filters [{ "_SYSTEMD_UNIT": "kubelet.service" }]
   pos_file /var/log/fluentd-journald-kubelet.pos
   read_from_head true
@@ -15,6 +16,7 @@
 # Logs from docker-systemd
 <source>
   @type systemd
+  @id in_systemd_docker
   filters [{ "_SYSTEMD_UNIT": "docker.service" }]
   pos_file /var/log/fluentd-journald-docker.pos
   read_from_head true
@@ -24,6 +26,7 @@
 # Logs from systemd-journal for interesting services.
 <source>
   @type systemd
+  @id in_systemd_bootkube
   filters [{ "_SYSTEMD_UNIT": "bootkube.service" }]
   pos_file /var/log/fluentd-journald-bootkube.pos
   read_from_head true
@@ -32,7 +35,8 @@
 
 <% case target when "papertrail"%>
 <filter bootkube>
-  type record_transformer
+  @type record_transformer
+  @id filter_rt_bootkube
   enable_ruby true
   <record>
     hostname #{ENV['FLUENT_HOSTNAME']}
