--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -8,6 +8,7 @@
 source "https://rubygems.org"
 
 gem "fluentd", "<%= fluentd_ver %>"
+gem "oj", "3.5.1"
 <% if !is_v1 %>
 gem "fluent-plugin-secure-forward"
 gem "fluent-plugin-record-reformer"
