Include rewrite-tag-filter plugin for fluentd 0.12

--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -12,6 +12,7 @@ gem "oj", "3.5.1"
 <% if !is_v1 %>
 gem "fluent-plugin-secure-forward"
 gem "fluent-plugin-record-reformer"
+gem "fluent-plugin-rewrite-tag-filter", "1.6.0"
 <% end %>
 <% case target when "elasticsearch" %>
 gem "fluent-plugin-elasticsearch"
