fix typo contanier --> container
Signed-off-by: Thoriq Satriya <thoriq.satriya94@gmail.com>

--- a/templates/conf/kubernetes.conf.erb
+++ b/templates/conf/kubernetes.conf.erb
@@ -10,7 +10,7 @@
 
 <source>
   @type tail
-  @id in_tail_contanier_logs
+  @id in_tail_container_logs
   path /var/log/containers/*.log
   pos_file /var/log/fluentd-containers.log.pos
   tag kubernetes.*
