Fixes the links in the README
For some reason they stopped working after my last change, even though
there was no diff... I can't see how they ever worked though

Signed-off-by: Ed Robinson <edward-robinson@cookpad.com>

--- a/templates/README.md.erb
+++ b/templates/README.md.erb
@@ -15,14 +15,14 @@
 
 <% debian.each do |image| %>
 <% path = image.split(":").first %>
-- `<%= path.tr("/","-") %>` [(<%= path %>/Dockerfile)][<%= path.split("/").last %>-dockerfile]
+- `<%= path.tr("/","-") %>` [docker-image/<%= path %>/Dockerfile](docker-image/<%= path %>/Dockerfile)
 <% end %>
 
 ### Alpine Linux
 
 <% alpine.each do |image| %>
 <% path = image.split(":").first %>
-- `<%= path.tr("/","-") %>` [(<%= path %>/Dockerfile)][<%= path.split("/").last %>-dockerfile]
+- `<%= path.tr("/","-") %>` [docker-image/<%= path %>/Dockerfile](docker-image/<%= path %>/Dockerfile)
 <% end %>
 
 ## What is Fluentd?
