--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -19,7 +19,7 @@ ENV PATH /fluentd/vendor/bundle/ruby/2.3.0/bin:$PATH
 ENV GEM_PATH /fluentd/vendor/bundle/ruby/2.3.0
 ENV GEM_HOME /fluentd/vendor/bundle/ruby/2.3.0
 # skip runtime bundler installation
-ENV FLUENTD_DISABLE_BUNDLER_INJECTION 1
+ENV FLUENTD_DISABLE_BUNDLER_INJECTION <% if requires_git %>0<% else %>1<% end %>
 
 COPY Gemfile* /fluentd/
 <% if is_alpine %>
