Pull kubernetes_remote_syslog from standard rubygems repo instead of github. Fix #135
Signed-off-by: Jake Sperlazza <wjsperlazza@outlook.com>

--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -49,7 +49,7 @@ gem "fluent-plugin-logzio"
 <% when "papertrail" %>
 gem "fluent-plugin-papertrail"
 <% when "syslog" %>
-gem "fluent-plugin-kubernetes_remote_syslog", git: "https://github.com/georgegoh/fluent-plugin-kubernetes_remote_syslog.git"
+gem "fluent-plugin-kubernetes_remote_syslog"
 <% when "kafka" %>
 gem "fluent-plugin-kafka"
 <% end %>
