Fix missing Graylog tag in fluentd.conf file and fix Gemfile to correct download a gelf gem.
Signed-off-by: Marcelo Vilar <marcelo.vilar@rivendel.com.br>

--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -42,7 +42,7 @@ gem "fluent-plugin-gcs", "0.4.0.beta1"
 gem "fluent-plugin-gcs", "~>0.3"
 <% end %>
 <% when "graylog" %>
-gem "gelf", git: "https://github.com/graylog-labs/gelf-rb.git"
+gem "gelf"
 gem "fluent-plugin-gelf-hs"
 <% when "logzio" %>
 gem "fluent-plugin-logzio"
