install gem  for debian images

--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -49,6 +49,7 @@ RUN set -ex \
      $buildDeps \
 <% end %>
      ruby-bundler \
+    && gem install bundler --version 1.16.1 \
 <% end %>
     && bundle config silence_root_warning true \
     && bundle install --gemfile=/fluentd/Gemfile --path=/fluentd/vendor/bundle \
