--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -12,7 +12,7 @@ FROM fluent/fluentd:<%= fluentd_ver %>
 FROM fluent/fluentd:<%= fluentd_ver %>-debian
 <% end %>
 
-MAINTAINER Eduardo Silva <eduardo@treasure-data.com>
+LABEL maintainer="Eduardo Silva <eduardo@treasure-data.com>"
 USER root
 WORKDIR /home/fluent
 ENV PATH /fluentd/vendor/bundle/ruby/2.3.0/bin:$PATH
