--- a/templates/entrypoint.sh.erb
+++ b/templates/entrypoint.sh.erb
@@ -1,5 +1,8 @@
 #!/usr/bin/dumb-init /bin/sh
 
+<% target = (dockerfile.split("/").last.split("-").last) %>
+<% if target == "elasticsearch" %>
+
 set -e
 
 if [ -z ${FLUENT_ELASTICSEARCH_USER} ] ; then
@@ -9,5 +12,6 @@ fi
 if [ -z ${FLUENT_ELASTICSEARCH_PASSWORD} ] ; then
    sed -i  '/FLUENT_ELASTICSEARCH_PASSWORD/d' /fluentd/etc/${FLUENTD_CONF}
 fi
+<% end %>
 
 exec fluentd -c /fluentd/etc/${FLUENTD_CONF} -p /fluentd/plugins --gemfile /fluentd/Gemfile ${FLUENTD_OPT}
