--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -66,6 +66,9 @@
   log_group_name "#{ENV['LOG_GROUP_NAME']}"
   auto_create_stream true
   use_tag_as_stream true
+<% if is_v1 %>
+  json_handler yajl # To avoid UndefinedConversionError
+<% end %>
 </match>
 <%  when "s3"%>
 <match **>
