--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -250,6 +250,7 @@
   @id out_kinesis_streams
   region "#{ENV['FLUENT_KINESIS_STREAMS_REGION'] || nil}"
   stream_name "#{ENV['FLUENT_KINESIS_STREAMS_STREAM_NAME']}"
+  include_time_key "#{ENV['FLUENT_KINESIS_STREAMS_INCLUDE_TIME_KEY'] || false}"
 <% if is_v1 %>
   <buffer>
     flush_interval 1
