adding myself as maintainer for splunkhec
adding Debian image

updating config for alpine image

Signed-off-by: Max Williams <max.williams@deliveryhero.com>

--- a/templates/README.md.erb
+++ b/templates/README.md.erb
@@ -64,6 +64,7 @@ Some images are contributed by users. If you have a problem/question for followi
 - gcs : @andor-pierdelacabeza
 - Amazon Kinesis : @shiftky
 - logz.io : @SaMnCo / @jamielennox
+- splunkhec: @FutureSharks
 
 ### References
 
