--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -64,4 +64,5 @@ gem "fluent-plugin-kubernetes_metadata_filter"
 <% if !is_alpine %>
 gem "ffi"
 gem "fluent-plugin-systemd"
+gem install fluent-plugin-prometheus -v 0.4.0
 <% end %>
