Use fluent-plugin-remote_syslog for Fluentd v1.2
Replace fluent-plugin-kubernetes_remote_syslog with fluent-plugin-remote_syslog.
Because fluent-plugin-kubernetes_remote_syslog uses old plugin API and
fluent-plugin-remote_syslog is well maintained.

Signed-off-by: Kenji Okimoto <okimoto@clear-code.com>

--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -52,7 +52,11 @@ gem "fluent-plugin-logzio"
 <% when "papertrail" %>
 gem "fluent-plugin-papertrail"
 <% when "syslog" %>
+<% if is_v1 %>
+gem "fluent-plugin-remote_syslog"
+<% else %>
 gem "fluent-plugin-kubernetes_remote_syslog"
+<% end %>
 <% when "kafka" %>
 gem "fluent-plugin-kafka"
 <% when "kinesis" %>
