--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -264,6 +264,27 @@
 </match>
 
 <% when "syslog" %>
+<% if is_v1 %>
+<match **>
+  @type remote_syslog
+  @id out_kube_remote_syslog
+  host "#{ENV['SYSLOG_HOST']}"
+  port "#{ENV['SYSLOG_PORT']}"
+  severity debug
+  program fluentd
+  hostname ${kubernetes_host}
+
+  protocol tcp
+  packet_size 65535
+
+  <buffer kubernetes_host>
+  </buffer>
+
+  <format>
+    @type ltsv
+  </format>
+</match>
+<% else %>
 <match **>
   @type kubernetes_remote_syslog
   @id out_kube_remote_syslog
@@ -275,6 +296,7 @@
   packet_size 65535
   output_data_type ltsv
 </match>
+<% end %>
 
 <% when "kinesis" %>
 <match **>
