--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -57,7 +57,7 @@ gem "fluent-plugin-gcs", "0.4.0.beta1"
 gem "fluent-plugin-gcs", "~> 0.3"
 <% end %>
 <% when "graylog" %>
-gem "gelf"
+gem "gelf", "3.0.0"
 <% if is_v1 %>
 gem "fluent-plugin-gelf-hs", "~> 1.0.7"
 <% else %>
